--- a/main/main.html
+++ b/main/main.html
@@ -1,7 +1,5 @@
-<<<<<<< HEAD
 <p>This is from main</p>
 <p>This is from main2</p>
-=======
 <p>Hello! My name is Niranjan Deuja.</p>
 <p>World is where I live.</p>
->>>>>>> feature1
+<p>cheking second push</p>
